--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
    margin: 0 auto;
    height: 100vh;
+   background-color: black;
 }
 
 #boardgame {
@@ -12,7 +13,8 @@ body {
 
 #boardgame > button {
     padding: 10px;
-    border: 1px solid black;
+    border: 2px solid red;
+    border-radius: 4px;
 }
 
 .grid-item {
@@ -28,6 +30,9 @@ body {
     text-align: center;
     font-family: 'Noto Sans Mono', monospace;
     font-size: 1.5rem;
+    color: #fff;
+    text-shadow: 3px 3px 20px red,
+    -2px 1px 30px red;
 }
 
 .game-grid {
@@ -36,44 +41,61 @@ body {
     align-items: center;
 }
 
-.win p {
-    font-weight: 600;
-    color: black;
-    z-index: 1;
-}
-
-.winner {
-    position: fixed;
-    left: 50%;
-    top: 15%;
-    transform: translate(-50%, 0);
-    font-size: 1.5rem;
-}
-
-.text {
-    position: fixed;
-    left: 50%;
-    top: 23%;
-    transform: translate(-50%, 0);
-    margin: 0;
-    font-size: 2rem;
-}
-
 .hide {
     display: none;
 }
 
 #turn {
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
+    font-size: 1.2rem;
+    color: white;
+    font-family: 'Noto Sans Mono', monospace;
 }
 
 #reset {
     margin-top: 1rem;
+    width: 200px;
+    font-family: 'Noto Sans Mono', monospace;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+    color: red;
+    border: 2px solid red;
+    background-color: black;
+    box-shadow: inset 0 0 0 0 red;
+    transition: ease-out 0.3s;
+    outline: none;
+    font-size: 1.5rem;
+    font-family: 'Noto Sans Mono', monospace;
 
+}
+
+#reset:hover {
+    box-shadow: inset 200px 0 0 0 white;
+    color: red;
 }
 
 .btn {
     display: flex;
     justify-content: center;
+    font-family: 'Noto Sans Mono', monospace;
+}
+
+#start {
+    width: 150px;
+    height: 50px;
+    font-size: 1.5rem;
+    border-radius: 4px;
+    border: none;
+    background-color: white;
+    color: red;
+    box-shadow: inset 0 0 0 0 red;
+    transition: ease-out 0.3s;
+    font-family: 'Noto Sans Mono', monospace;
+}
+
+#start:hover {
+    box-shadow: inset 150px 0 0 0 red;
+    color: white;
 }
