--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
     outline: none;
     font-size: 1.5rem;
     font-family: 'Noto Sans Mono', monospace;
+    cursor: pointer;
 
 }
 
@@ -93,6 +94,7 @@ body {
     box-shadow: inset 0 0 0 0 red;
     transition: ease-out 0.3s;
     font-family: 'Noto Sans Mono', monospace;
+    cursor: pointer;
 }
 
 #start:hover {
